# anchor_crash_course

./: .gitignore  README.md  cargo-template.toml
anchor-function-tutorial/: Anchor.toml
anchor-function-tutorial/tests/: anchor-function-tutorial.ts
basic_storage/: Anchor.toml
basic_storage/tests/: basic_storage.ts
day1/: Anchor.toml
day10/: Anchor.toml
day10/tests/: day10.ts
day13/: Anchor.toml
day13/tests/: day13.ts
day14/: Anchor.toml
day14/tests/: day14.ts
day2/: Anchor.toml
day2/tests/: day2.ts
day20/: Anchor.toml
day20/tests/: day20.ts
day23/: Anchor.toml
day23/tests/: day23.ts
day24/: Anchor.toml
day24/tests/: day24.ts
day25/: Anchor.toml
day25/tests/: day25.ts
day26/: Anchor.toml
day26/programs/day26/: Cargo.toml
day26/programs/day26/src/: lib.rs
day26/tests/: day26.ts
day27/: Anchor.toml
day27/tests/: day27.ts
day28/: Anchor.toml
day28/tests/: day28.ts
day29/: Anchor.toml
day29/tests/: day29.ts
day30/: Anchor.toml
day30/tests/: day30.ts
day31/: Anchor.toml
day31/tests/: day31.ts
day32/: Anchor.toml  data_reader-keypair.json
day32/tests/: day32.ts
day33/: Anchor.toml
day33/tests/: day33.ts
day34/: Anchor.toml  package-lock.json
day34/tests/: day34.ts
day35/: Anchor.toml  package-lock.json
day35/tests/: day35.ts
day4/: Anchor.toml
day4/tests/: errors.ts
deploy_tutorial/: Anchor.toml
deploy_tutorial/tests/: deploy_tutorial.ts
example_map/: Anchor.toml
example_map/tests/: example_map.ts
macro-demo/: Cargo.toml
sysvar/: Anchor.toml
tryrust/: Anchor.toml
(+41 files in other folders)
